--- a/app/src/main/res/menu/toolbar_tracking_menu.xml
+++ b/app/src/main/res/menu/toolbar_tracking_menu.xml
@@ -5,7 +5,7 @@
     <item
         android:id="@+id/miCancelTracking"
         android:icon="@drawable/ic_close_white"
-        android:title="@string/cancel_tracking"
+        android:title="@string/cancel_run"
         android:visible="false"
         app:showAsAction="always" />
 
